--- a/page1.html
+++ b/page1.html
@@ -5,9 +5,9 @@
     <title></title>
   </head>
   <body>
-      <h1>Page1</h1>
+      <h1>Tax Page</h1>
       <form class="" action="/" method="post">
-          <input type="text" name="firstName" value="" placeholder="Enter your name">
+          <input type="text" name="userProvince" value="" placeholder="Enter your province">
           <input type="submit" name="submit" value="SUBMIT">
       </form>
   </body>
